--- a/views/partials/dataTable.ejs
+++ b/views/partials/dataTable.ejs
@@ -6,6 +6,7 @@
     $(document).ready(function () {
     
     $('<%= tableID %>').DataTable({
+        // TODO: implement multiple date columns support.
         <% if (typeof dateColumn == 'number') { %>
             columnDefs: [
 
