--- a/views/dashboards/mainDashboard.ejs
+++ b/views/dashboards/mainDashboard.ejs
@@ -43,7 +43,7 @@
                                         <li class="nav-item">
                                             <a class="nav-link active" id="home-tab" data-bs-toggle="tab"
                                                 href="#dashboard" role="tab" aria-controls="dashboard"
-                                                aria-selected="true">Dashboard</a>
+                                                aria-selected="true"><%= lingua.dashboard%></a>
                                         </li>
                                         <!-- <li class="nav-item">
                                             <a class="nav-link" id="overview-tab" data-bs-toggle="tab" href="#overview"
