--- a/views/location/edit.ejs
+++ b/views/location/edit.ejs
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Edit Location </title>
+    <title><%= lingua.location.edit%></title>
     <!-- plugins:css -->
     <link rel="stylesheet" href="../vendors/feather/feather.css">
     <link rel="stylesheet" href="../vendors/mdi/css/materialdesignicons.min.css">
@@ -45,7 +45,7 @@
                                 <div class="col-12 grid-margin stretch-card">
                                     <div class="card card-rounded">
                                         <div class="card-body">
-                                            <h4>Edit Location</h4>
+                                            <h4><%= lingua.location.edit%></h4>
                                             <% if(location) { %>
                                             <form id="form-register" class="pt-3" action="/edit-location/?url=<%- url%>"
                                                 method="post">
@@ -58,14 +58,14 @@
                                                 <div class="row">
                                                     <div class="col-lg-6">
                                                         <div class="form-group">
-                                                            <label class="required" for="name">Name</label>
+                                                            <label class="required" for="name"><%= lingua.name%></label>
                                                             <input autocomplete="off" value="<%-location.name%>"
                                                                 type="text" id="name" name="name"
                                                                 class="form-control form-control-lg" required />
                                                         </div>
 
                                                         <div class="form-group">
-                                                            <label>Select Services</label>
+                                                            <label><%= lingua.selectServices%></label>
                                                             <select name="services" id="services"
                                                                 class="form-control form-control-lg js-example-basic-multiple w-100"
                                                                 multiple="multiple">
@@ -81,18 +81,19 @@
                                                                 <% var checked = (location.isActive) ? "checked" : "";   %>
 
                                                                 <input name="isActive" type="checkbox"
-                                                                    class="form-check-input" <%= checked%>>Active
+                                                                    class="form-check-input"
+                                                                    <%= checked%>><%= lingua.active%>
                                                                 <i class="input-helper"></i></label>
                                                         </div>
 
                                                         <div class="form-group">
-                                                            <label>Select Users</label>
+                                                            <label><%= lingua.user.selectMultiple%></label>
                                                             <select name="users" id="users"
                                                                 class="form-control form-control-lg js-example-basic-multiple w-100"
                                                                 multiple="multiple">
                                                                 <% for(const user of users) { %>
                                                                 <% var selected = (location.users.includes(user.id)) ? "selected" : "";   %>
-                                                                <option value="<%= user.id%>" <%=selected%>>
+                                                                <option value="<%= user.id%>" <%= selected%>>
                                                                     <%= user.personalInfo.firstName +' '+ user.personalInfo.lastName + ' (' + user.role + ')' %>
                                                                 </option>
                                                                 <% } %>
@@ -104,11 +105,11 @@
                                                     <div class="mt-3">
 
                                                         <a href="<%- url%>"
-                                                            class="btn btn-block btn-light btn-lg font-weight-medium auth-form-btn float-end">Cancel</a>
+                                                            class="btn btn-block btn-light btn-lg font-weight-medium auth-form-btn float-end"><%= lingua.cancel%></a>
 
                                                         <button
                                                             class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn float-end"
-                                                            type="submit">Save</button>
+                                                            type="submit"><%= lingua.save%></button>
                                                     </div>
                                                 </div>
                                             </form>
