--- a/views/partials/alerts.ejs
+++ b/views/partials/alerts.ejs
@@ -2,13 +2,14 @@
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.3.3/dist/sweetalert2.all.min.js"></script>
 <script type="text/javascript" src="../js/sweet-alerts.js"></script>
 <script>
-    $(document).ready(function() {
+    $(document).ready(function () {
         var msj = "<%- message %>";
         var alertType = '<%- alertType %>';
         var allAlertTypes = '<%- JSON.stringify(alertTypes) %>';
+        var lingua = `<%- JSON.stringify(lingua) %>`;
 
         if (msj !== '' && alertType !== '') {
-            sweetAlerts(allAlertTypes, alertType, msj);
+            sweetAlerts(allAlertTypes, alertType, msj, lingua);
         }
     });
 </script>
