Add lingua to auth controller.

--- a/views/auth/resetPassword.ejs
+++ b/views/auth/resetPassword.ejs
@@ -54,13 +54,13 @@
                             </h4>
                             <% if (messages.error) { %>
                             <p class="error">
-                                <%= messages.error %>
+                                <%= messages.error%>
                             </p>
                             <% } %>
 
                             <% if (messages.info) { %>
                             <p class="info">
-                                <%= messages.info %>
+                                <%= messages.info%>
                             </p>
                             <% } %>
                             <!-- <h6 class="fw-light">Sign in to continue.</h6> -->
@@ -71,7 +71,8 @@
                                         <input type="hidden" value="<%= token%>" name="token" />
 
                                         <div class="form-group">
-                                            <label for="password" class="required"><%= lingua.user.password.name></label>
+                                            <label for="password"
+                                                class="required"><%= lingua.user.password.name%></label>
 
                                             <input type="password" id="password" name="password" autocomplete="off"
                                                 class="form-control mb-3 form-control-lg"
@@ -82,12 +83,14 @@
                                                 <p>
                                                     <%= lingua.passwordRequirement%>
                                                 </p>
-                                                <p> <span id="letter" class="invalid"> <b>1 <%= lingua.lowerCase%></b>
+                                                <p> <span id="letter" class="invalid"> <b>1
+                                                            <%= lingua.user.password.lowerCase%></b>
                                                     </span>, <span id="capital" class="invalid"><b>1
-                                                            <%= lingua.upperCase%></b></span>, <span id="number"
-                                                        class="invalid"> <b>1 <%= lingua.number%></b></span>,
+                                                            <%= lingua.user.password.upperCase%></b></span>, <span
+                                                        id="number" class="invalid"> <b>1
+                                                            <%= lingua.user.password.number%></b></span>,
                                                     <span id="length" class="invalid"> <b>8
-                                                            <%= lingua.characters%></b></span>
+                                                            <%= lingua.user.password.characters%></b></span>
                                                 </p>
                                             </div>
                                         </div>
