--- a/views/dashboards/mainDashboard.ejs
+++ b/views/dashboards/mainDashboard.ejs
@@ -53,7 +53,7 @@
                                             <a class="nav-link" id="members-tab" data-bs-toggle="tab" href="#members"
                                                 role="tab" aria-controls="members" aria-selected="true">Members</a>
                                         </li> -->
-                                        <% if(user?.subscriptions) { %>
+                                        <% if(user?.hasSubscription) { %>
                                         <li class="nav-item">
                                             <a class="nav-link" id="profile-tab" data-bs-toggle="tab" href="#plan"
                                                 role="tab" aria-selected="false"><%= lingua.myPlans%></a>
@@ -87,10 +87,10 @@
                                             src="https://charts.mongodb.com/charts-autocare-development-kzztx/embed/dashboards?id=62280248-a354-4826-891f-fa5a1c9302ea&theme=light&autoRefresh=true&maxDataAge=3600&showTitleAndDesc=false&scalingWidth=fixed&scalingHeight=fixed"></iframe> -->
                                         <iframe class="vh-100 w-100"
                                             style="background: #F1F5F4;border: none;border-radius: 2px;box-shadow: 0 2px 10px 0 rgba(70, 76, 79, .2);"
-                                            src="https://charts.mongodb.com/charts-autocare-development-kzztx/public/dashboards/62280248-a354-4826-891f-fa5a1c9302ea?theme=light&autoRefresh=true&maxDataAge=3600&showTitleAndDesc=false&scalingWidth=fixed&scalingHeight=fixed"></iframe>
+                                            src="<%= reportURL%>"></iframe>
 
                                     </div>
-                                    <% if(user?.subscriptions) { %>
+                                    <% if(user?.hasSubscription) { %>
                                     <div class="tab-pane" id="plan" role="tabpanel" aria-labelledby="plan">
                                         <%- include('../partials/subscriptions/subscriptions.ejs' , {user, hasSubscription : user?.hasSubscription, 
                                             prices, subscriptions}); %>
