--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -48,11 +48,14 @@
                                                 <div>
                                                     <h4 class="card-title card-title-dash"><%= lingua.user.users%></h4>
                                                 </div>
+                                                <% if([roles.ADMIN].includes(user.role)) { %>
                                                 <div>
                                                     <a href="/create-user" class="btn btn-primary btn-icon-text"
                                                         type="button"><i
                                                             class="mdi mdi-map-marker-plus btn-icon-prepend"></i><%= lingua.user.add%></a>
                                                 </div>
+                                                <% } %>
+
                                             </div>
                                             <br>
                                             <div class="table-responsive  mt-1">
@@ -96,19 +99,19 @@
                                                                     class="btn btn-icon btn-icon-no-border no-margin">
                                                                     <i class="far fa-edit icon-sm"></i>
                                                                 </a>
-
+                                                                <% if([roles.ADMIN].includes(user.role)) { %>
                                                                 <a class="btn btn-icon btn-icon-no-border no-margin manage-billing-button"
                                                                     style="margin: 0;" type="submit"
                                                                     value="<%- user.billingID%>"
                                                                     email="<%- user.email%>">
                                                                     <i class="fab fa-stripe-s icon-sm"></i>
                                                                 </a>
-
                                                                 <a id="deleteBtn"
                                                                     onclick="return confirmDelete('/delete-user', '<%- user.id%>')"
                                                                     class="btn btn-icon btn-icon-no-border no-margin">
                                                                     <i class="fas fa-trash-alt icon-sm text-danger"></i>
                                                                 </a>
+                                                                <% } %>
                                                             </td>
                                                         </tr>
                                                         <% } %>
