Validate if the user have billingID to render createSubs. Bug fixes on validatePlate function. Upper Case the car plate.

--- a/views/auth/createSubs.ejs
+++ b/views/auth/createSubs.ejs
@@ -188,7 +188,7 @@
                 // Get all values
                 var brand = $("#brand").val(),
                     model = $("#carModel").val(),
-                    plate = $("#carPlate").val(),
+                    plate = $("#carPlate").val().toUpperCase(),
                     priceID = $("#product").val(),
                     product = $("#product").find('option:selected').attr("name"),
                     price = $("#product").find('option:selected').attr("price"),
