Bug fixes on languages. Optimize table btns css. Limit manage billing btn.

--- a/public/css/vertical-layout-light/style.css
+++ b/public/css/vertical-layout-light/style.css
@@ -29971,6 +29971,12 @@ table.dataTable tbody td.select-checkbox:after {
     line-height: 2.5;
 }
 
+.br-0 {
+    border-radius: 0 !important;
+}
+.br-5 {
+    border-radius: 5px !important;
+}
 
 /* Select2 */
 
