--- a/views/cars/index.ejs
+++ b/views/cars/index.ejs
@@ -107,13 +107,13 @@
 
                                                                 <a <%- !hasServices ? `href="/edit-car/${car.id}?url=/cars"` : ''%>
                                                                     type="button"
-                                                                    class="btn btn-icon btn-icon-no-border no-margin <%= hasServices ? 'disabled' : '' %>">
+                                                                    class="btn btn-icon btn-icon-no-border no-margin pt-0 pb-0 <%= hasServices ? 'disabled' : '' %>">
                                                                     <i class="far fa-edit icon-sm"></i>
                                                                 </a>
 
                                                                 <a id="deleteBtn"
                                                                     <%- !hasServices ? `onclick="return confirmDelete('/delete-car', '${car.id}')"` : ''%>
-                                                                    class="btn btn-icon btn-icon-no-border no-margin <%= hasServices ? 'disabled' : '' %>">
+                                                                    class="btn btn-icon btn-icon-no-border no-margin pt-0 pb-0 <%= hasServices ? 'disabled' : '' %>">
                                                                     <i class="fas fa-trash-alt icon-sm text-danger"></i>
                                                                 </a>
 
