Optimize User Cart. Implement addToCart, removeFromCart and emptyCart.

--- a/views/auth/createSubs.ejs
+++ b/views/auth/createSubs.ejs
@@ -165,8 +165,8 @@
             var cartString = '<%- JSON.stringify(cart) %>'
             if (cartString) {
                 var cart = JSON.parse(cartString);
-                if (cart?.length > 0) {
-                    for (item of cart) {
+                if (cart?.items?.length > 0) {
+                    for (item of cart.items) {
                         rowIdx++;
                         addDataToTable(item)
                     }
