--- a/views/dashboards/validateMembership.ejs
+++ b/views/dashboards/validateMembership.ejs
@@ -58,7 +58,6 @@
                                                             <button id="clearQueueBtn"
                                                                 class="btn btn-sm btn-outline-dark p-2 br-5"><%= lingua.clear%></button>
                                                         </div>
-                                                        <div id="resultOfCameraScanLoading"></div>
                                                         <div id="resultOfCameraScan">
                                                             <% if(readingQueue?.length > 0) { %>
                                                             <% for(car of readingQueue) { %>
@@ -68,9 +67,11 @@
                                                             </a>
                                                             <br>
                                                             <% } %>
-                                                            <% } else { %>
-                                                            N/A
                                                             <% } %>
+                                                        </div>
+                                                        <div style="height: 10px !important"
+                                                            id="resultOfCameraScanLoading">
+
                                                         </div>
                                                     </div>
                                                     <br>
@@ -171,34 +172,20 @@
         });
         // The socket is already define on navbar.
         socket.on('reading-plates', () => {
-
             showResult('#resultOfCameraScanLoading', '<p>Reading...</p>')
-            document.querySelector('#resultOfCameraScan').innerHTML = '';
+        })
 
-            // showResult('#resultOfCameraScan',
-            //     `<div class="spinner text-center">
-            //                     <div class="spinner-grow" style="width: 2rem; height: 2rem"></div>
-            //                 </div>`
-            // );
+        socket.on('stop-reading-plates', () => {
+            showResult('#resultOfCameraScanLoading', '')
         })
 
         // Receive data
         socket.on('read-plates', (data) => {
+            console.log('New Plate: ' + data.plate)
             console.log(JSON.stringify(data));
             document.querySelector('#resultOfCameraScanLoading').innerHTML = '';
-
-            let readingQueue = <%- JSON.stringify(readingQueue) %>
-            if (readingQueue)
-                readingQueue = readingQueue.map(({ plate }) => (plate));
-
-            console.log(readingQueue);
-            for (car of data) {
-                if (!readingQueue.includes(car.plate)) {
-                    document.querySelector('#resultOfCameraScan').innerHTML += (`
-                    <a id="plate-${car.plate}" class="btn btn-link" onclick="setPlateValue('${car.plate}')"><b>${car.plate}</b></a>` + '<br>')
-                    readingQueue.push(car.plate)
-                }
-            }
+            document.querySelector('#resultOfCameraScan').innerHTML += (`
+                    <a id="plate-${data.plate}" class="btn btn-link" onclick="setPlateValue('${data.plate}')"><b>${data.plate}</b></a>` + '<br>')
         })
 
         function setInputType(value) {
